--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
     "classnames": "^2.2.3",
     "firebase": "^2.4.2",
     "immutable": "^3.7.6",
+    "lodash": "^4.9.0",
     "material-ui": "^0.14.4",
     "react": "^0.14.8",
     "react-addons-css-transition-group": "^0.14.6",
     "react-dom": "^0.14.6",
     "react-redux": "^4.4.0",
     "react-router": "^2.0.0-rc5",
+    "react-router-redux": "^4.0.2",
     "redux": "^3.3.1",
+    "redux-logger": "^2.6.1",
     "redux-thunk": "^2.0.1"
   },
   "devDependencies": {
