--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "author": "Ákos Kiszely",
   "license": "MIT",
   "dependencies": {
-    "axios": "^0.9.0",
+    "axios": "^0.9.1",
     "classnames": "^2.2.3",
     "firebase": "^2.4.2",
     "immutable": "^3.7.6",
@@ -38,6 +38,7 @@
     "babel-preset-stage-3": "^6.5.0",
     "chai": "^3.5.0",
     "chai-immutable": "^1.5.4",
+    "copy-webpack-plugin": "^1.1.1",
     "css-loader": "^0.23.1",
     "deep-freeze": "0.0.1",
     "eslint": "^2.4.0",
