--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "start": "webpack-dev-server",
+    "start": "webpack-dev-server --progress --colors",
     "test": "mocha --compilers js:babel-core/register --recursive --require ./test/test_helper.js",
     "test:watch": "npm run test -- --watch",
     "prod": "webpack -p"
@@ -16,7 +16,7 @@
     "firebase": "^2.4.2",
     "immutable": "^3.7.6",
     "lodash": "^4.9.0",
-    "material-ui": "^0.14.4",
+    "material-ui": "0.15.0-alpha.2",
     "react": "^0.14.8",
     "react-addons-css-transition-group": "^0.14.6",
     "react-dom": "^0.14.6",
