--- a/.eslintrc
+++ b/.eslintrc
@@ -10,10 +10,7 @@
   },
   "rules": {
     "strict": 0,
-    "indent": [
-      1,
-      4
-    ],
+    "indent": [ 1, 2, { "SwitchCase": 1 }],
     "no-console": 0,
     "no-unused-vars": [
       1,
@@ -23,7 +20,7 @@
       }
     ],
     "react/forbid-prop-types": 1,
-    "react/jsx-boolean-value": 1,
+    "react/jsx-boolean-value": [1,"always"],
     "react/jsx-closing-bracket-location": 1,
     "react/jsx-curly-spacing": 1,
     "react/jsx-indent-props": 1,
@@ -31,7 +28,7 @@
     "react/jsx-max-props-per-line": 1,
     "react/jsx-no-duplicate-props": 1,
     "react/jsx-no-undef": 1,
-    "react/jsx-quotes": 1,
+    "jsx-quotes": ["error", "prefer-single"],
     "react/jsx-sort-prop-types": 1,
     "react/jsx-sort-props": 1,
     "react/jsx-uses-react": 1,
@@ -52,7 +49,9 @@
     "react/wrap-multilines": 1,
     "id-length": 0
   },
-  "ecmaFeatures": {
-    "jsx": true
+  "parserOptions": {
+    "ecmaFeatures": {
+      "jsx": true
+    }
   }
 }
