--- a/package.json
+++ b/package.json
@@ -3,56 +3,78 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "start": "webpack-dev-server --progress --colors",
-    "test": "mocha --compilers js:babel-core/register --recursive --require ./test/test_helper.js",
+    "prestart": "babel-node tools/startMessage.js",
+    "start": "npm-run-all --parallel test:watch open:src lint:watch",
+    "open:src": "babel-node tools/srcServer.js",
+    "lint": "node_modules/.bin/esw webpack.config.* src tools",
+    "lint:watch": "npm run lint -- --watch",
+    "test": "mocha --reporter progress tools/testSetup.js src/**/*.test.js src/components/**/*.test.js",
     "test:watch": "npm run test -- --watch",
-    "prod": "webpack -p"
+    "clean-dist": "npm run remove-dist && mkdir dist",
+    "remove-dist": "node_modules/.bin/rimraf ./dist",
+    "build:html": "babel-node tools/buildHtml.js",
+    "prebuild": "npm-run-all clean-dist test lint build:html",
+    "build": "babel-node tools/build.js",
+    "postbuild": "babel-node tools/distServer.js"
   },
   "author": "Ákos Kiszely",
   "license": "MIT",
   "dependencies": {
-    "axios": "^0.9.1",
-    "classnames": "^2.2.3",
+    "axios": "^0.11.1",
+    "babel-polyfill": "6.8.0",
+    "bootstrap": "3.3.6",
     "emailjs": "^1.0.4",
-    "firebase": "^2.4.2",
-    "immutable": "^3.7.6",
+    "firebase": "^3.0.2",
+    "jquery": "2.2.3",
     "lodash": "^4.9.0",
     "material-ui": "0.15.0-alpha.2",
-    "react": "^0.14.8",
-    "react-addons-css-transition-group": "^0.14.6",
-    "react-dom": "^0.14.6",
-    "react-redux": "^4.4.0",
-    "react-router": "^2.0.0-rc5",
-    "react-router-redux": "^4.0.2",
-    "redux": "^3.3.1",
+    "react": "15.0.2",
+    "react-dom": "15.0.2",
+    "react-redux": "4.4.5",
+    "react-router": "2.4.0",
+    "react-router-redux": "4.0.4",
+    "redux": "3.5.2",
     "redux-logger": "^2.6.1",
-    "redux-thunk": "^2.0.1"
+    "redux-thunk": "2.0.1"
   },
   "devDependencies": {
-    "babel-core": "^6.4.5",
-    "babel-eslint": "^6.0.3",
-    "babel-loader": "^6.2.1",
-    "babel-plugin-transform-object-rest-spread": "^6.6.5",
-    "babel-polyfill": "^6.5.0",
-    "babel-preset-es2015": "^6.5.0",
-    "babel-preset-react": "^6.3.13",
+    "babel-cli": "6.8.0",
+    "babel-core": "6.8.0",
+    "babel-eslint": "^6.0.4",
+    "babel-loader": "6.2.4",
+    "babel-plugin-react-display-name": "2.0.0",
+    "babel-preset-es2015": "6.6.0",
+    "babel-preset-react": "6.5.0",
+    "babel-preset-react-hmre": "1.1.1",
     "babel-preset-stage-0": "^6.5.0",
-    "babel-preset-stage-3": "^6.5.0",
-    "chai": "^3.5.0",
-    "chai-immutable": "^1.5.4",
-    "copy-webpack-plugin": "^1.1.1",
-    "css-loader": "^0.23.1",
-    "deep-freeze": "0.0.1",
-    "eslint": "^2.4.0",
-    "eslint-config-airbnb": "^6.1.0",
-    "eslint-plugin-react": "^4.2.3",
-    "html-webpack-plugin": "^2.7.1",
-    "jsdom": "^8.3.0",
-    "mocha": "^2.4.5",
-    "react-addons-test-utils": "^0.14.8",
-    "react-hot-loader": "^1.3.0",
-    "style-loader": "^0.13.0",
-    "webpack": "^1.12.11",
-    "webpack-dev-server": "^1.14.1"
+    "babel-register": "6.8.0",
+    "colors": "1.1.2",
+    "compression": "^1.6.1",
+    "cross-env": "1.0.7",
+    "css-loader": "0.23.1",
+    "enzyme": "2.2.0",
+    "eslint": "^2.10.2",
+    "eslint-plugin-import": "1.6.1",
+    "eslint-plugin-react": "5.0.1",
+    "eslint-watch": "2.1.11",
+    "eventsource-polyfill": "0.9.6",
+    "expect": "1.19.0",
+    "express": "4.13.4",
+    "extract-text-webpack-plugin": "1.0.1",
+    "file-loader": "0.8.5",
+    "jsdom": "8.5.0",
+    "mocha": "2.4.5",
+    "nock": "8.0.0",
+    "npm-run-all": "1.8.0",
+    "open": "0.0.5",
+    "react-addons-test-utils": "15.0.2",
+    "redux-immutable-state-invariant": "1.2.3",
+    "redux-mock-store": "1.0.2",
+    "rimraf": "2.5.2",
+    "style-loader": "0.13.1",
+    "url-loader": "0.5.7",
+    "webpack": "1.13.0",
+    "webpack-dev-middleware": "1.6.1",
+    "webpack-hot-middleware": "2.10.0"
   }
 }
