--- a/package.json
+++ b/package.json
@@ -27,15 +27,17 @@
     "firebase": "^3.0.2",
     "jquery": "2.2.3",
     "lodash": "^4.9.0",
-    "material-ui": "0.15.0-alpha.2",
     "react": "15.0.2",
+    "react-bootstrap": "^0.29.4",
+    "react-bootstrap-table": "^2.3.3",
     "react-dom": "15.0.2",
     "react-redux": "4.4.5",
     "react-router": "2.4.0",
     "react-router-redux": "4.0.4",
     "redux": "3.5.2",
     "redux-logger": "^2.6.1",
-    "redux-thunk": "2.0.1"
+    "redux-thunk": "2.0.1",
+    "toastr": "^2.1.2"
   },
   "devDependencies": {
     "babel-cli": "6.8.0",
